--- a/AT FIRST SIGHT/main.css
+++ b/AT FIRST SIGHT/main.css
@@ -61,7 +61,11 @@ html, body {
     padding: 0px;
 }
 
-header {}
+header {
+    background: rgb(146, 52, 52);
+}
+
+.subheader {}
 
 h2 {
     text-align: center;
@@ -82,7 +86,7 @@ h2 {
 footer {
     height: 3%;
     padding-bottom: 5%;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     text-align: center;
     color: white;
@@ -95,14 +99,14 @@ h3 {
 }
 
 .content {
+    float: inline-start;
     z-index: 10;
-    background-image: linear-gradient(to top right, whitesmoke, rgb(245, 223, 223));
+    background-image: linear-gradient(to top right, whitesmoke, rgb(49, 45, 45));
     margin-left: 20%;
     margin-right: 20%;
     font-size: 1.2em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: rgb(53, 51, 51);
-    height: 50%;
 }
 
 /* ================ TABLET SCHERM ================== */
@@ -121,6 +125,19 @@ h3 {
 
 /* ================ GSM SCHERM ================== */
 
+#containerGesprekspartners img {
+    background: white;
+    border: 2px solid grey;
+    height: 4em;
+    float: left;
+    clear: left;
+}
+
+#containerGesprekspartners {
+    background: lightblue;
+    padding: 1em;
+}
+
 /* ================ TABLET SCHERM ================== */
 
 /* @media only screen and (min-width: 768px) */
@@ -135,35 +152,317 @@ h3 {
 
 /* ================ GSM SCHERM ================== */
 
+.wrapper {
+    width: 500px;
+    margin: 0 auto;
+}
+
+.bg {
+    background-image: url(/kissing-couple-1148914_1280.jpg);
+    height: 350px;
+    background-position: center;
+    background-size: cover;
+}
+
+footer {
+    text-align: center;
+    color: white;
+    background-color: black;
+    position: afixed;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+}
+
+h1 {
+    position: relative;
+    top: 52%;
+    text-align: center;
+    font-size: 3em;
+    font-family: 'Lobster';
+    color: rgb(146, 52, 52);
+    -webkit-text-stroke: .1px whitesmoke;
+    word-spacing: 0.4em;
+    opacity: .7;
+}
+
+h3 {
+    text-align: center;
+}
+
+.content {
+    position: relative;
+    margin-top: 10%;
+    color: rgb(43, 38, 38);
+    background: rgba(207, 199, 199, 0.116);
+    z-index: 10;
+}
+
+button[class=inloggen] {
+    position: absolute;
+    right: 5%;
+    top: 5%;
+    float: right;
+    width: 10%;
+    background-color: rgba(201, 78, 78, 0.863);
+    color: whitesmoke;
+    border-color: whitesmoke;
+    padding: 8px 2px;
+    margin: 8px 0;
+    border-style: groove;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: .5em;
+    font-weight: bold;
+}
+
+button[name=inloggen]:hover {
+    opacity: 1;
+    transition: all 0.1s ease-in-out;
+    transform: scale(1.1);
+    border-radius: 4px;
+}
+
+a[class=inschrijven] {
+    position: absolute;
+    width: 40%;
+    LEFT: 35%;
+    top: 40%;
+    background-color: rgba(201, 78, 78, 0.863);
+    color: whitesmoke;
+    border-color: whitesmoke;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border-style: groove;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 1em;
+    opacity: 0.9;
+}
+
+button[class=inschrijven]:hover {
+    opacity: 1;
+    transition: all 0.4s ease-in-out;
+    transform: scale(1.1);
+    border-radius: 10px;
+}
+
+/* ==========================================================================
+   Media Queries
+   ========================================================================== */
+
+@media only screen and (min-width: 768px) {
+    h1 {
+        top: 1%;
+        position: relative;
+        padding-top: 2.8em;
+        font-size: 4em;
+        color: rgb(206, 87, 87);
+        -webkit-text-stroke: 1px whitesmoke;
+        word-spacing: 0.7em;
+    }
+    .content {
+        position: relative;
+        margin-top: 150px;
+        color: rgb(43, 38, 38);
+        background: rgba(207, 199, 199, 0.116);
+        z-index: 10;
+    }
+    footer {
+        position: fixed;
+        height: 35px;
+    }
+    button[name=inloggen] {
+        width: 12%;
+        background-color: rgba(201, 78, 78, 0.863);
+        color: whitesmoke;
+        padding: 12px;
+        margin: 40px 0;
+        font-size: 1.2em;
+        border-style: groove;
+        border-color: whitesmoke;
+        border-radius: 6px;
+        top: 20px;
+        right: 12px;
+        position: absolute;
+        font-weight: bold;
+        opacity: .8;
+    }
+    button[name=inloggen]:hover {
+        opacity: 1;
+        transition: all 0.4s ease-in-out;
+        transform: scale(1.1);
+        border-radius: 10px;
+    }
+    a[class=inschrijven] {
+        position: absolute;
+        top: 300px;
+        left: 350px;
+        width: 27%;
+        font-size: 1.2em;
+        background-color: rgba(201, 78, 78, 0.863);
+        color: whitesmoke;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border-style: groove;
+        border-radius: 4px;
+        opacity: .8;
+        font-weight: bold;
+    }
+    button[class=inschrijven]:hover {
+        opacity: 1;
+        transition: all 0.4s ease-in-out;
+        transform: scale(1.1);
+        border-radius: 10px;
+    }
+}
+
+/* ==================== WIDE: Main
+   ============ */
+
+@media only screen and (min-width: 1140px) {
+    .bg {
+        height: 550px;
+        background-position: center;
+        background-size: cover;
+    }
+    .content {
+        position: relative;
+        margin-top: 50px;
+        color: rgb(43, 38, 38);
+        background: rgba(207, 199, 199, 0.116);
+        z-index: 10;
+    }
+    h1 {
+        position: relative;
+        padding-top: 3em;
+        font-size: 5.5em;
+        color: rgb(206, 87, 87);
+        -webkit-text-stroke: 1px whitesmoke;
+        word-spacing: 0.7em;
+    }
+    footer {
+        position: fixed;
+        height: 50px;
+    }
+    button[name=inloggen] {
+        position: absolute;
+        float: right;
+        width: 10%;
+        background-color: rgba(201, 78, 78, 0.863);
+        color: whitesmoke;
+        border-color: whitesmoke;
+        word-spacing: 0.4em;
+        opacity: .8;
+        font-size: 1.2em;
+        font-weight: bold;
+        padding: 14px 3px;
+        margin: 30px;
+        border-style: groove 10px;
+        border-radius: 8px;
+        top: 65px;
+        right: 15px;
+    }
+    button[name=inloggen]:hover {
+        opacity: 1;
+        transition: all 0.4s ease-in-out;
+        transform: scale(1.1);
+        border-radius: 12px;
+    }
+    a[class=inschrijven] {
+        position: absolute;
+        left: 40%;
+        top: 450px;
+        width: 20%;
+        opacity: .8;
+        background-color: rgba(201, 78, 78, 0.863);
+        color: whitesmoke;
+        border-color: whitesmoke;
+        padding: 14px 20px;
+        margin: 8px 0;
+        font-size: 1.2em;
+        border-style: groove;
+        font-weight: bold;
+        border-radius: 8px;
+    }
+    button[class=inschrijven]:hover {
+        opacity: 1;
+        transition: all 0.4s ease-in-out;
+        transform: scale(1.1);
+        border-radius: 12px;
+    }
+}
+
+/* ==========================================================================
+   Helper classes
+   ========================================================================== */
+
+/* Dropdown Button */
+
 .dropdown {
     position: absolute;
-    left: 10%;
+    margin-left: 35%;
+    width: 30%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: inline-block;
-    margin: auto;
+    -webkit-appearance: searchfield;
+    opacity: .9;
+    background: rgba(201, 78, 78, 0.863);
+    color: whitesmoke;
+    font-size: 1.5em;
+    text-align: center;
+    border-radius: 10px;
+    border: 2px solid whitesmoke;
+}
+
+.dropdown input {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    height: 2em;
+    width: 20em;
+    border-radius: 8px;
+    border-style: double rgb(3, 3);
 }
 
 .dropdown-content {
     display: none;
-    position: absolute;
-    left: 0;
-    right: 0;
-    width: 50%;
-    height: 50%;
+    position: relative;
     z-index: 100;
-    margin: auto;
-    text-align: left;
+}
+
+.dropdown-content button {
+    color: whitesmoke;
+    background: rgb(44, 126, 118);
+    font-size: 80%;
+    text-transform: uppercase;
+    border-radius: 6px;
+}
+
+#input {
+    width: 20em;
 }
 
 .show {
     display: block;
 }
 
-.blur {
+/*.blur {
     filter: blur(5px);
     -webkit-filter: blur(5px);
     -moz-filter: blur(5px);
     -o-filter: blur(5px);
     -ms-filter: blur(5px);
+}*/
+
+#overlay {
+    position: fixed;
+    display: none;
+    left: 0px;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    background: rgba(201, 78, 78, 0.863);
+    z-index: 999;
 }
 
 /* ================ TABLET SCHERM ================== */
@@ -269,6 +568,7 @@ a[class=inschrijven]:hover {
         z-index: 10;
     }
     footer {
+        position: fixed;
         height: 5%;
         padding-bottom: 1%;
     }
@@ -331,7 +631,7 @@ a[class=inschrijven]:hover {
         position: relative;
         margin-top: 50px;
         color: rgb(43, 38, 38);
-        background: rgba(207, 199, 199, 0.116);
+        background-image: linear-gradient(to top right, whitesmoke, rgb(204, 186, 186));
         z-index: 10;
     }
     h1 {
@@ -343,6 +643,7 @@ a[class=inschrijven]:hover {
         word-spacing: 0.7em;
     }
     footer {
+        position: fixed;
         height: 3%;
     }
     button[name=inloggen] {
@@ -377,6 +678,8 @@ a[class=inschrijven]:hover {
         width: 20%;
         opacity: .8;
         background-color: rgba(201, 78, 78, 0.863);
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: center;
         color: whitesmoke;
         border-color: whitesmoke;
         padding: 14px 20px;
