--- a/main.css
+++ b/main.css
@@ -35,10 +35,56 @@ html, body {
 
 .wrapper {
     position: absolute;
-    text-align: center;
+    left: 35%;
+    background: rgb(238, 214, 204);
+    padding: 2%;
+    color: brown;
+    height: 70vh;
+    width: 500px;
     margin: 0 auto;
-    left: 25%;
+}
+
+.wrapper input {
+    position: absolute;
+    right: 20%;
+}
+
+.wrapper select {
+    position: absolute;
     right: 25%;
+}
+
+.wrapper button {
+    color: #fff !important;
+    text-transform: uppercase;
+    background: #ed3330;
+    border-radius: 5px;
+    display: inline-block;
+    border: none;
+}
+
+.wrapper #Foto input {
+    color: #fff !important;
+    text-transform: uppercase;
+    background: #ed3330;
+    border-radius: 5px;
+    display: inline-block;
+    border: none;
+}
+
+#RadiobuttonMan {
+    position: absolute;
+    left: 25%
+}
+
+#RadiobuttonVrouw {
+    position: absolute;
+    left: 25%
+}
+
+#RadiobuttonX {
+    position: absolute;
+    left: 25%
 }
 
 header {
@@ -56,8 +102,6 @@ header {
     font-size: 21px;
     line-height: 2;
 }
-
-.subheader nav {}
 
 .subheader ul {
     list-style-type: none;
@@ -110,45 +154,19 @@ h3 {
 }
 
 .content {
-    position: relative;
-    z-index: 10;
     font-size: 1.2em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-#heart {
-    position: absolute;
-}
-
-#heart:before, #heart:after {
-    position: absolute;
-    content: "";
-    left: 50px;
-    top: 0;
-    width: 50px;
-    height: 80px;
-    background: red;
-    border-radius: 50px 50px 0 0;
-    transform: rotate(-45deg);
-    transform-origin: 0 100%;
-    box-shadow: 0px 0px px 0px rgb(99, 28, 28);
-}
-
-#heart:after {
-    left: 0;
-    transform: rotate(45deg);
-    transform-origin: 100% 100%;
-}
-
 .man img {
-    position: absolute;
-    bottom: -8%;
+    position: relative;
+    float: left;
 }
 
 .vrouw img {
-    position: absolute;
+    position: sticky;
+    float: left;
     left: 70%;
-    bottom: -8%;
 }
 
 footer {
@@ -160,23 +178,6 @@ footer {
     color: rgb(82, 79, 79);
     background-color: black;
     width: 100%;
-}
-
-.neen a {
-    position: absolute;
-    text-decoration: none;
-    left: 45%;
-    width: 10%;
-    background-color: rgba(201, 78, 78, 0.863);
-    color: rgb(8, 8, 8);
-    border-color: rgb(8, 8, 8);
-    padding: 14px 20px;
-    font-size: 1em;
-    border-style: groove;
-    font-weight: bold;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    transform: scale(1.1);
-    border-radius: 12px;
 }
 
 /*====================================================================================================*/
@@ -193,10 +194,7 @@ footer {
     clear: left;
 }
 
-#containerGesprekspartners {
-    background: lightblue;
-    padding: 1em;
-}
+#containerGesprekspartners {}
 
 /* ================ TABLET SCHERM ================== */
 
@@ -209,28 +207,24 @@ footer {
 /* ============  INDEX  ============*/
 
 @media only screen and (min-width: 1140px) {
-    .wrapper {
-        width: 500px;
-        margin: 0 auto;
-    }
     .bg {
         background-image: url(/kissing-couple-1148914_1280.jpg);
         background-position: center;
         background-size: cover;
         height: 550px;
     }
-    .content {
-        position: relative;
-        margin-top: 50px;
-        color: rgb(43, 38, 38);
-        background: rgba(207, 199, 199, 0.116);
-        z-index: 10;
-    }
     #index h1 {
         font-size: 5.5em;
         position: relative;
         padding-top: 3em;
         -webkit-text-stroke: 1px whitesmoke;
+    }
+    #index .wrapper {
+        background-image: linear-gradient(to bottom right, red, yellow);
+        color: black;
+        left: 33%;
+        height: 30vh;
+        padding: 12px;
     }
     button[name=inloggen] {
         position: absolute;
