--- a/main.css
+++ b/main.css
@@ -422,6 +422,12 @@ a[class=inschrijven]:hover {
 }
 
 #overlay {}
+.main{
+    pointer-events: none;
+}
+button, a{
+    pointer-events: all;
+}
 
 /*====================================================================================================*/
 
