--- a/main.css
+++ b/main.css
@@ -75,8 +75,8 @@ html, body {
     background: rgb(238, 214, 204);
     padding: 2%;
     color: brown;
-    height: 70vh;
-    width: 500px;
+    height: 110vh;
+    width: 400px;
     margin: 0 auto;
 }
 
@@ -195,12 +195,14 @@ h3 {
 }
 
 .man img {
+    width: 30%;
     position: fixed;
     float: left;
     left: -5%;
 }
 
 .vrouw img {
+    width: 30%;
     position: fixed;
     float: left;
     left: 75%;
@@ -209,7 +211,7 @@ h3 {
 footer {
     position: fixed;
     bottom: 0;
-    height: 1%;
+    height: 5%;
     padding-bottom: 2%;
     text-align: center;
     color: rgb(82, 79, 79);
@@ -235,29 +237,18 @@ footer {
     align-content: center;
 }
 
-#containerGesprekspartners {
-
-}
-
 #containerBerichten {
-
-}
-
-.bericht {
-max-width: 33%;
-
-}
-
-.nicknameGesprekspartner {
-
-}
-
-.nicknameBoodschap {
- 
+    background: white;
+    max-height: 41em;
+    overflow: scroll;
+    max-width: 33.33%;
+    position: relative;
+    bottom: 0;
 }
 
 .boodschap {
-
+    color: blue;
+    font-style: italic;
 }
 
 #containerGesprekspartners img {
@@ -291,7 +282,7 @@ max-width: 33%;
     background-image: linear-gradient(to bottom right, red, yellow);
     color: black;
     left: 33%;
-    height: 30vh;
+    height: 45vh;
     padding: 12px;
 }
 
@@ -357,8 +348,8 @@ a[class=inschrijven]:hover {
 
 .dropdown {
     position: absolute;
-    margin-left: 35%;
-    width: 30%;
+    margin-left: 30%;
+    width: 40%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: inline-block;
     -webkit-appearance: searchfield;
@@ -373,10 +364,8 @@ a[class=inschrijven]:hover {
 }
 
 .dropdown input {
-    margin-left: 20%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     height: 1.8em;
-    width: 20em;
     border-radius: 8px;
     border-style: double rgb(3, 3);
 }
@@ -428,6 +417,19 @@ button, a {
 
 /* ============  PROFIEL  ============*/
 
+.onaanpasbaar {
+    opacity: 0.4;
+    background: linear-gradient(63deg, rgb(185, 150, 135) 23%, transparent 23%) 7px 0, linear-gradient(63deg, transparent 74%, rgb(185, 150, 135) 78%), linear-gradient(63deg, transparent 34%, rgb(185, 150, 135)38%, rgb(233, 210, 201) 58%, transparent 62%), rgb(238, 214, 204);
+    ;
+    background-size: 16px 48px;
+    width: 40%;
+}
+
+.onaanpasbaar input {
+    background: grey;
+    cursor: not-allowed;
+}
+
 /*====================================================================================================*/
 
 /* ============  ZOEKEN  ============*/
@@ -454,7 +456,7 @@ button, a {
     font-weight: bolder;
     background: rgba(244, 211, 245, 0.863);
     margin-left: 5%;
-    margin-right: 15%;
+    margin-right: 8%;
 }
 
 #lijst li:before {
@@ -463,7 +465,7 @@ button, a {
 }
 
 #lijst {
-    left: 0%;
+    left: -6%;
     padding-top: 10%;
     padding-bottom: 10%;
     padding-left: 33.3%;
@@ -483,16 +485,24 @@ button, a {
 
 .social {
     position: absolute;
-    bottom: 20%;
+    top: 1%;
+}
+
+.social img {
+    display: block;
+    max-width: 90%;
+    ;
+    max-height: 50%;
+    width: auto;
+    height: auto;
 }
 
 .fa {
-    padding: 20px;
+    padding: 5%;
     font-size: 30px;
-    width: 50px;
     text-align: center;
     text-decoration: none;
-    margin: 5px 2px;
+    margin: 2% 2%;
     border-radius: 10%;
 }
 
