--- a/main.css
+++ b/main.css
@@ -37,47 +37,6 @@
 
 /*====================================================================================================*/
 
-/* ============  BERICHTEN  ============*/
-
-.gesprekspartner {
-    border: 1px solid rgb(0, 0, 0);
-    border-radius: 10px;
-    padding: 5px;
-    height: 10em;
-}
-
-#berichten img {
-    height: 225px;
-    width: 75%;
-    clear: both;
-    align-content: center;
-}
-
-#containerBerichten {
-    background: white;
-    max-height: 41em;
-    overflow: scroll;
-    max-width: 33.33%;
-    position: relative;
-    bottom: 0;
-}
-
-.boodschap {
-    color: blue;
-    font-style: italic;
-}
-
-#containerGesprekspartners img {
-    background: white;
-    border: 2px solid rgb(141, 75, 75);
-    border-radius: 10px;
-    float: left;
-    width: 150px;
-    height: 150px;
-}
-
-/*====================================================================================================*/
-
 /* ============  INSCHRIJVEN  ============*/
 
 #inschrijven .subheader li {
@@ -159,7 +118,7 @@
     /*====================================================================================================*/
     /* ============  ALGEMEEN  ============*/
     #index button, a {
-        pointer-events: all;    
+        pointer-events: all;
     }
     #index .content {
         visibility: hidden
@@ -190,9 +149,17 @@
         width: 80%;
         margin: 0 auto;
     }
+    #berichten .wrapper {
+        width: 99%;
+    }
     .wrapper input {
         position: absolute;
         right: 5%;
+    }
+    #berichten .wrapper input {
+        position: absolute;
+        right: 1%;
+        width: 30%;
     }
     .wrapper select {
         position: absolute;
@@ -248,7 +215,6 @@
     }
     .subheader li {
         text-align: center;
-        padding: 8%;
         display: inline;
         margin: 2%;
     }
@@ -257,9 +223,10 @@
         color: whitesmoke;
     }
     .subheader a:hover {
+        text-decoration: underline;
         background: whitesmoke;
-        color: rgb(146, 52, 52);
-        border-radius: 4px;
+        color: rgb(117, 28, 28);
+        border-radius: 8px;
     }
     h1 {
         left: 20%;
@@ -267,7 +234,7 @@
         position: absolute;
         margin-top: 10%;
         font-family: lobster;
-        color: black;
+        color: white;
         word-spacing: 0em;
     }
     h2 {
@@ -297,6 +264,40 @@
         width: 100%;
     }
     /*====================================================================================================*/
+    /* ============  BERICHTEN  ============*/
+    .gesprekspartner {
+        border: 1px solid rgb(0, 0, 0);
+        border-radius: 10px;
+        padding: 5px;
+        height: 10em;
+    }
+    #berichten img {
+        height: 225px;
+        width: 75%;
+        clear: both;
+        align-content: center;
+    }
+    #containerBerichten {
+        background: white;
+        max-height: 41em;
+        overflow: scroll;
+        max-width: 33.33%;
+        position: relative;
+        bottom: 0;
+    }
+    .boodschap {
+        color: blue;
+        font-style: italic;
+    }
+    #containerGesprekspartners img {
+        background: white;
+        border: 2px solid rgb(141, 75, 75);
+        border-radius: 10px;
+        float: left;
+        width: 150px;
+        height: 150px;
+    }
+    /*====================================================================================================*/
     /* ============  OVER ONS  ============*/
     .man img {
         visibility: hidden;
@@ -311,24 +312,28 @@
         top: 1%;
     }
     .social img {
-        visibility: hidden;
+        visibility: visible;
+        height: 20%;
+        width: 90%;
     }
     .fa {
-        padding: 5%;
+        padding: 4%;
         font-size: 30px;
         text-align: center;
         text-decoration: none;
         margin: 2% 2%;
-        border-radius: 10%;
+        border-radius: 50%;
     }
     .fa:hover {
         opacity: 0.5;
     }
     .fa-facebook {
+        display: inline;
         background: #3B5998;
         color: white;
     }
     .fa-twitter {
+        display: inline;
         background: #55ACEE;
         color: white;
     }
@@ -480,6 +485,40 @@
 
 @media only screen and (min-width: 768px) {
     /*====================================================================================================*/
+    /* ============  BERICHTEN  ============*/
+    .gesprekspartner {
+        border: 1px solid rgb(0, 0, 0);
+        border-radius: 10px;
+        padding: 5px;
+        height: 10em;
+    }
+    #berichten img {
+        height: 225px;
+        width: 75%;
+        clear: both;
+        align-content: center;
+    }
+    #containerBerichten {
+        background: white;
+        max-height: 41em;
+        overflow: scroll;
+        max-width: 33.33%;
+        position: relative;
+        bottom: 0;
+    }
+    .boodschap {
+        color: blue;
+        font-style: italic;
+    }
+    #containerGesprekspartners img {
+        background: white;
+        border: 2px solid rgb(141, 75, 75);
+        border-radius: 10px;
+        float: left;
+        width: 150px;
+        height: 150px;
+    }
+    /*====================================================================================================*/
     /* ============  OVER ONS  ============*/
     .social {
         position: absolute;
@@ -560,7 +599,7 @@
         background: rgb(238, 214, 204);
         padding: 2%;
         color: brown;
-        height: 110vh;
+        height: 1em;
         width: 400px;
         margin: 0 auto;
     }
